# BitTorrent

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  embedded_refactor_plan.md  refactor_plan.md
clients/: README.md
clients/bt_cli/: Cargo.toml
clients/bt_cli/src/: main.rs
clients/bt_daemon/: Cargo.toml
clients/bt_daemon/src/: main.rs
clients/bt_webui/: Cargo.toml
clients/bt_webui/frontend/: app.js  index.html  style.css
clients/bt_webui/src/: main.rs
clients/sync_hub/: Cargo.toml
clients/sync_hub/src/: lib.rs  main.rs  manager.rs  torrent_gen.rs  watcher.rs
clients/sync_hub/tests/: sync_tests.rs
clients/torrent_client/: Cargo.toml  refactor_plan.md
clients/torrent_client/src/: app.rs  main.rs  state.rs  ui.rs
clients/torrent_client_shared/: Cargo.toml
clients/torrent_client_shared/src/: lib.rs
docs/: README.md  api-proposal.md  api-reference.md  api-stability.md  architecture.md  attributes-refactor-plan.md  client_improvement_plan.md  dht.md  dry-refactor-plan.md  encryption.md  future-missing-features-plan.md  hardening-plan.md  implementation-plan.md  library_optimization_plan.md  magnet-link-plan.md  missing-features-plan.md  missing_features_refactor_plan.md  nat-pmp.md  performance.md  phase-ii-plan.md  portability.md  refactor-plan.md  roadmap.md  sync-hub.md  ui-layout.md  use-cases.md  utp.md
examples/: Cargo.toml  README.md
examples/magnet_dht_example/: Cargo.toml
examples/magnet_dht_example/src/: main.rs
examples/port_mapping_example/: Cargo.toml
examples/port_mapping_example/src/: main.rs
examples/src/: main.rs
examples/torrent_fast_resume_example/: Cargo.toml
examples/torrent_fast_resume_example/src/: main.rs
examples/torrent_info_example/: Cargo.toml
examples/torrent_info_example/src/: main.rs
examples/torrent_session_example/: Cargo.toml
examples/torrent_session_example/src/: main.rs
notes/: attributes_refactor_plan.md  refactor_plan.md
src/: bencode.rs  disk_io.rs  manager.rs  manual_reset_event.rs  metainfo.rs  peer.rs  peer_id.rs  util.rs
tests/: bencode_additional_tests.rs  bencode_tests.rs  metainfo_tests.rs
