[package]
name = "bt_daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
bittorrent_rs = { path = "../../library", package = "bittorrent-rs" }
torrent_client_shared = { path = "../torrent_client_shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
futures = { version = "0.3", features = ["executor"] }
ctrlc = "3.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Pipes", "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO", "Win32_Security"] }
