[package]
name = "bt_webui"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
torrent_client_shared = { path = "../torrent_client_shared" }
